y first bostrap page

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 </div>
   <!-- Portoflio end -->
                         <!-- contact stard  -->
-                              <section class="footer">
+                              <section class="footer" data-aos="fade-up-right" data-aos-offset="200">
                                 <div class="container py-5">
                                   <div class="text-center my-5">
                                     <h1 class="font" data-aos="fade-up" data-aos-offset="200">Login <span class="text-primary">From</span></h1>
