--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portfolio Page</title>
+    <link rel="icon" type="image/x-icon" href="https://img.freepik.com/free-vector/branding-identity-corporate-vector-logo-letter-w-design_460848-13900.jpg?uid=R90650170&ga=GA1.1.824527321.1701348741&semt=ais_hybrid">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -20,39 +21,38 @@
   </head>
   <body>
     <!-- navbar stard  -->
-     <header>
-    <nav class="navbar navbar-expand-lg bg-white-tertiary px-4 border-bottom">
+     <header id="Home">
+    <nav class="navbar navbar-expand-lg bg-white-tertiary px-5 border-bottom">
         <div class="container-fluid">
-          <a class="navbar-brand fs-2" href="#">Portfolio-<span class="text-primary">Web</span></a>
+          <a class="navbar-brand fs-2 text1" href="#">Portfolio-<span class="text-primary">Web</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-3 mb-lg-0 fs-5 text-center">
               <li class="nav-item">
-                <a class="nav-link active text-primary" aria-current="page" href="#">Home</a>
+                <a class="nav-link active text-primary text" aria-current="page" href="#Home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link text" href="#About">About</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Service
+                <a class="nav-link dropdown-toggle text" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Services
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Digital Marketing</a></li>
-                  <li><a class="dropdown-item" href="#">Web Development</a></li>
-                  <li><a class="dropdown-item" href="#">Graphic Design</a></li>
+                  <li><a class="dropdown-item text-danger text" href="#Services">Digital Marketing</a></li>
+                  <li><a class="dropdown-item text-warning text" href="#Services">Web Development</a></li>
+                  <li><a class="dropdown-item text-primary text" href="#Services">Graphic Design</a></li>
                 </ul>
               </li>
               <li class="nav-item"></li>
-                <a class="nav-link" aria-current="page" href="#">Portfolio</a>
+                <a class="nav-link text" aria-current="page" href="#Portfolio">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link text" href="#Contact">Contact</a>
               </li>
-            </ul>
-            
+            </ul>  
           </div>
         </div>
       </nav>
@@ -84,8 +84,7 @@
         <div class="carousel-caption  d-md-block">
           <h5>Third slide label</h5>
           <p>Some representative placeholder content for the third slide.</p>
-        </div>
-        
+        </div>     
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -100,7 +99,7 @@
   <!-- carousalo end -->
 </header> 
 <!-- about stard  -->
-<section class="about my-5">
+<section class="about my-5" id="About">
     <div class="container">
       <div class="text-center my-5">
         <h1 data-aos="fade-up" data-aos-offset="200" class="font">About <span class="text-primary">Me</span></h1>
@@ -118,7 +117,7 @@
          will be a fusion of innovation, hands-on learning, and a commitment to shaping the tech leaders of tomorrow.
       </p>
       <button type="button" class="btn btn-light mb-5">More About Me</button>
-          <div class="accordion" id="accordionExample">
+          <div class="accordion" id="accordionExample" data-aos="zoom-in-left" data-aos-offset="200">
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button text" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -131,7 +130,7 @@
             </div>
           </div>
         </div>
-        <div class="accordion-item" data-aos="zoom-in-left" data-aos-offset="200">
+        <div class="accordion-item" >
           <h2 class="accordion-header">
             <button class="accordion-button collapsed text" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
              My Skills
@@ -165,8 +164,7 @@
                                   </section> 
                                     <!-- about end -->
 <!-- service stard -->
-
-<section class="services py-5 bg-light">
+<section class="services py-5 bg-light" id="Services">
   <div class="container">
     <div class="text-center my-5">
       <h1 class="font" data-aos="fade-up" data-aos-offset="200">Our <span class="text-primary">Services</span></h1>
@@ -255,10 +253,11 @@
         </div>
       </div>
     </div>
-
   </div>
  <!-- service end -->
   <!-- Portfolio stard  -->
+   <section class="my-5" id="Portfolio">
+    <div class="container">
   <div class="text-center my-5">
     <h1 class="font" data-aos="fade-up" data-aos-offset="200">Our <span class="text-primary">Portfolio</span></h1>
     <hr class="w-25 m-auto" />
@@ -269,7 +268,7 @@
         <div class="card-body">
           <img src="image/r1.jpg"class="img-fluid rounded-start border border-info " alt="">
           <h6 class="card-title mt-4">All Course</h6>
-          <h4 class="card-text mt-2">Professional Graphic Design</h4>
+          <h4 class="card-text mt-2">Professional Graphic Design.</h4>
           <a href="#" class="btn btn-outline-primary">Click For Discount</a>
         </div>
       </div>
@@ -289,7 +288,7 @@
         <div class="card-body">
           <img src="image/deisgn.jpg" class="img-fluid rounded-start border border-info mb-3" alt="">
           <h6 class="card-title mt-4">All Course</h6>
-          <h4 class="card-text mt-2">Professional UI/UX Design</h4>
+          <h4 class="card-text mt-2">Professional UI/UX Design.</h4>
           <a href="#" class="btn btn-outline-primary">Click For Discount</a>
         </div>
       </div>
@@ -300,7 +299,7 @@
         <div class="card-body">
           <img src="image/5.jpg" class="img-fluid rounded-start border border-info mb-4" alt="">
           <h6 class="card-title mt-4">All Course</h6>
-          <h4 class="card-text mt-2">MERN Stack Development</h4>
+          <h4 class="card-text mt-2">MERN Stack Development.</h4>
           <a href="#" class="btn btn-outline-primary">Click For Discount</a>
         </div>
       </div>
@@ -327,15 +326,17 @@
     </div> 
   </div>
 </div>
+</div>
+</section>
   <!-- Portoflio end -->
                         <!-- contact stard  -->
-                              <section class="footer" data-aos="fade-up-right" data-aos-offset="200">
+                              <section class="" data-aos="fade-up-right" data-aos-offset="200" id="Contact">
                                 <div class="container py-5">
                                   <div class="text-center my-5">
                                     <h1 class="font" data-aos="fade-up" data-aos-offset="200">Login <span class="text-primary">From</span></h1>
                                     <hr class="w-25 m-auto" />
                                   </div>
-                               <div class="row">
+                                <div class="row">
                                     <div class="col-sm-12 col-md-6 col-lg-6 col-12">
                                       <form action="">
                                         <div class="mb-4">
@@ -360,9 +361,34 @@
                                     </div>
                                   </div>
                                 </div>
-                              </section>                          
-    <div class="container-fluid bg-info-subtle text-dark p-3 mt-5 fs-6 text-center">&copyCopyright 2024 Webcoder-IT Institute.</div>                     
-<!-- contact end -->  
+                              </section> 
+           <!-- contact end -->   
+  <!-- footer stard  -->
+  <section >
+    <div class="container ">
+       <div data-aos="fade-up" data-aos-offset="200">
+            <div class="footer-logo">
+                <img src="" > 
+            </div>
+        <div class="social-logo mt-5 mb-2">
+            <a href="#"><i class="fa-solid fa-envelope"></i>  bdprakib10@gmail.com</a>
+    </div>
+         <div class="social-logo mb-2">
+                <a href=""><i class="fa-solid fa-phone"></i>  +8801991854563</a>
+                                                                               </div>
+                                                                                    <div class="social-logo">
+                                                                                        <a href=""><i class="fa-solid fa-phone"></i> +8801831686625</a> 
+                                                                                            </div>
+                                                                                               <div class=" social-logo-1 text-center">
+                                                                                                      <a href="https://www.facebook.com/Bd.p.Rakib.Rjs"><i class="fa-brands fa-facebook"></i></a>     
+                                                                                                            <a href="https://www.instagram.com/_rakib_bhai_38/?hl=en" class="ms-2"><i class="fa-brands fa-instagram"></i></a>
+                                                                                                                                                                                                                                  </div>
+                                                                                                                                                                                                                              </section>
+  <!-- footer end -->           
+           <!-- copyCopyright stard -->
+    <div class="container-fluid bg-info-subtle text-dark p-3 mt-5 fs-6 text-center">&copyCopyright 2024 Webcoder-IT Institute.</div>    
+    <!-- copyCopyright end                  -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
