y first bostrap page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -113,7 +114,7 @@
       <p class="p-2 text1">
         I'm  Mohammad Rakib As A Professional Full Stack Web Developer. 
         I'm passionate about cultivating skills in web and software development, 
-        particularly with Html Css Javascript Boostrap PHP Laravel. Our journey together
+        particularly with HTML CSS JAVASCRIPT BOOSTRAP PHP LARAVEL. Our journey together
          will be a fusion of innovation, hands-on learning, and a commitment to shaping the tech leaders of tomorrow.
       </p>
       <button type="button" class="btn btn-light mb-5">More About Me</button>
@@ -286,7 +287,7 @@
     <div class="col-sm-12 col-md-4 col-lg-4 col-12">
       <div class="card" data-aos="fade-down-left" data-aos-offset="200">
         <div class="card-body">
-          <img src="image/deisgn.jpg" class="img-fluid rounded-start border border-info mb-3" alt="">
+          <img src="image/uxui.jpg" class="img-fluid rounded-start border border-info mb-3" alt="">
           <h6 class="card-title mt-4">All Course</h6>
           <h4 class="card-text mt-2">Professional UI/UX Design.</h4>
           <a href="#" class="btn btn-outline-primary">Click For Discount</a>
@@ -382,8 +383,7 @@
                                                                                                <div class=" social-logo-1 text-center">
                                                                                                       <a href="https://www.facebook.com/Bd.p.Rakib.Rjs"><i class="fa-brands fa-facebook"></i></a>     
                                                                                                             <a href="https://www.instagram.com/_rakib_bhai_38/?hl=en" class="ms-2"><i class="fa-brands fa-instagram"></i></a>
-                                                                                                                                                                                                                                  </div>
-                                                                                                                                                                                                                              </section>
+                                                                                                                                                                                                                                  </div>                                                                                                                                                                                                                           </section>
   <!-- footer end -->           
            <!-- copyCopyright stard -->
     <div class="container-fluid bg-info-subtle text-dark p-3 mt-5 fs-6 text-center">&copyCopyright 2024 Webcoder-IT Institute.</div>    
